// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering should render valid snapshot 1`] = `
<option
  key="1"
  value={1}
>
  Test Character
</option>
`;

exports[`rendering should render valid snapshot without character name 1`] = `
<option
  key="1"
  value={1}
>
  test-character
</option>
`;
